fix: :bug: fixed display of the divider on firefox

--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -135,9 +135,6 @@ slot[name="content"] {
 }
 
 .divider {
-  position: absolute;
-  top: 100%;
-  left: 0;
 
   width: 100%;
   height: 1px;
